--- a/app/src/main/res/drawable/ic_baseline_density_medium_24.xml
+++ b/app/src/main/res/drawable/ic_baseline_density_medium_24.xml
@@ -1,4 +1,4 @@
-<vector android:height="32dp" android:tint="#FFFFFF"
+<vector android:height="32dp" android:tint="#525858"
     android:viewportHeight="24" android:viewportWidth="24"
     android:width="32dp" xmlns:android="http://schemas.android.com/apk/res/android">
     <path android:fillColor="@android:color/white" android:pathData="M3,3h18v2h-18z"/>
